<resources>
    <string name="app_name">Cookhub</string>
    <string name="sign_in">Sign in</string>
    <string name="title_activity_main_menu">MainMenuActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="explain" translatable="false">Please enter your email address</string>
    <string name="menu_user">User\'s personal data</string>
    <string name="menu_uploaded">Uploaded recipes</string>
    <string name="menu_notifications">Notifications</string>
    <string name="menu_favorites">Favorite recipes</string>
    <string name="menu_logout">Sign out</string>
    <string name="menu_invite_friends">Invite friends</string>
    <string name="noticifaction_text">You have %d new notifications</string>
    <string name="menu_rate">Rate Cookhub</string>
    <string name="invite_message">Here you can share Cookhub with your friends! Invite them to Cookhub !</string>
    <string name="bottom_nav_home">Home</string>
    <string name="bottom_nav_search">Search</string>
    <string name="bottom_nav_favorite">Favorites</string>
    <string name="bottom_nav_profile">Profile</string>
    <string name="ingredients">Ingredients</string>
    <string name="recipe">Recipe</string>
    <string name="nutr_info">Nutrition Info</string>
    <string name="meal_type">Meal Type</string>
    <string name="search">Search</string>
    <string name="cuisines">Cuisines</string>
    <string name="invite_friends">Invite friends</string>
    <string name="user_profile">User Profile</string>
    <string name="rating">Rating</string>
    <string name="logout">Log out</string>
    <string name="personal_info">Personal Info</string>
</resources>