<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_personal_data"
            android:icon="@drawable/ic_baseline_person_24"
            android:title="@string/menu_user" />
        <item
            android:id="@+id/nav_uploaded"
            android:icon="@drawable/ic_baseline_arrow_circle_up_24"
            android:title="@string/menu_uploaded" />
        <item
            android:id="@+id/nav_notifications"
            android:icon="@drawable/ic_baseline_notifications_24"
            android:title="@string/menu_notifications" />

        <item
            android:id="@+id/nav_invite_friends"
            android:icon="@drawable/ic_baseline_people_24"
            android:title="@string/menu_invite_friends" />
        <item
            android:id="@+id/nav_favorites"
            android:icon="@drawable/ic_baseline_favorite_24"
            android:title="@string/menu_favorites" />
        <item
            android:id="@+id/nav_rate"
            android:icon="@drawable/ic_baseline_star_rate_24"
            android:title="@string/menu_rate" />
        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/ic_baseline_exit_to_app_24"
            android:title="@string/menu_logout" />
    </group>
</menu>