<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/home_impl"
        android:enabled="true"
        android:icon="@drawable/ic_round_home_24"
        android:title="@string/bottom_nav_home"/>
    <item
        android:id="@+id/search_impl"
        android:enabled="true"
        android:icon="@drawable/ic_round_search_24"
        android:title="@string/bottom_nav_search"/>
    <item
        android:id="@+id/favorites_impl"
        android:enabled="true"
        android:icon="@drawable/ic_baseline_favorite_24"
        android:title="@string/bottom_nav_favorite"/>
    <item
        android:id="@+id/profile_impl"
        android:enabled="true"
        android:icon="@drawable/ic_baseline_person_24"
        android:title="@string/bottom_nav_profile"/>
</menu>