<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/user_profile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:text="@string/user_profile"
        android:textAlignment="center"
        android:textColor="@color/orange"
        android:textStyle="bold"
        android:padding="30dp"
        android:textSize="20sp"/>


    <Button
        android:id="@+id/info_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/personal_info"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:drawableTint="@color/orange"
        android:layout_marginTop="20dp"
        android:textSize="18dp"
        android:drawableLeft="@drawable/ic_round_person_pin_24"
        android:backgroundTint="@color/white"
        app:layout_constraintTop_toBottomOf="@id/user_profile"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        style="?android:attr/borderlessButtonStyle"
        />
    <Button
        android:id="@+id/rating_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/rating"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:drawableTint="@color/orange"
        android:layout_marginTop="20dp"
        android:textSize="18dp"
        android:drawableLeft="@drawable/ic_baseline_star_rate_24"
        android:backgroundTint="@color/white"
        app:layout_constraintTop_toBottomOf="@id/info_btn"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        style="?android:attr/borderlessButtonStyle"
        />

    <Button
        android:id="@+id/invite_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/invite_friends"
        android:textAllCaps="false"
        android:layout_marginTop="20dp"
        android:textColor="@color/black"
        android:drawableTint="@color/orange"
        android:textSize="18dp"
        android:drawableLeft="@drawable/ic_round_people_alt_24"
        android:backgroundTint="@color/white"
        app:layout_constraintTop_toBottomOf="@id/rating_btn"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        style="?android:attr/borderlessButtonStyle"
        />

    <Button
        android:id="@id/logout_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/logout"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginBottom="30dp"
        app:layout_constraintBottom_toTopOf="@id/bottom_navigation"/>


    <com.google.android.material.bottomnavigation.BottomNavigationView

        android:id="@+id/bottom_navigation"
        style="@style/Widget.MaterialComponents.BottomNavigationView.Colored"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:menu="@menu/bottom_navigation_menu"
        app:layout_constraintBottom_toBottomOf="parent"/>


</androidx.constraintlayout.widget.ConstraintLayout>